# snippets-python

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: cicd-pr.yml
snippets_python/dataclass/: main.py  model.py
snippets_python/exception/: main.py
snippets_python/logging/: logger.py  main.py
tests/: main_test.py
tests/dataclass/: model_test.py
tests/exception/: main_test.py
tests/snippets_python/logging/: logger_test.py
tests/unittest/: unittest_test.py
