[tool.poetry]
name = "snippets-python"
version = "1.0.0"
description = ""
authors = ["kojisuganuma <kojisuganuma93@gmail.com>"]
readme = "README.md"
packages = [{include = "snippets_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
black = "^23.10.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
pytest = "^7.4.2"
pyproject-flake8 = "^6.1.0"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80

[tool.flake8]
max-complexity = 10
max-line-length = 80
extend-ignore = "E203"
exclude = ".git,__pycache__,docs/source/conf.py,old,build,dist"

[tool.pytest.ini_options]
filterwarnings = []
markers = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
